# doc-chat-bot

./: .gitignore  CLAUDE.md
api/: pyproject.toml
api/src/: app.py
api/src/config/: env.py
api/src/routes/: chat.py
api/src/services/: embedding_service.py  file_service.py  llm_service.py  store.py
backend/: .gitignore  main.py  pyproject.toml
backend/src/: app.py
backend/src/config/: db.py  env.py
backend/src/models/: models.py  schemas.py
backend/src/routes/: auth.py  chat.py  upload.py
backend/src/services/: auth_service.py  embedding_service.py  llm_service.py
frontend/: .gitignore  components.json  package.json  pnpm-lock.yaml
frontend/.claude/: settings.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: theme-toggle.tsx
