[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beanie>=2.1.0",
    "faiss-cpu>=1.13.2",
    "fastapi[standard]>=0.136.1",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.12.1",
    "pymongo>=4.17.0",
    "pypdf2>=3.0.1",
    "requests>=2.33.1",
    "sentence-transformers>=5.4.1",
    "uvicorn>=0.46.0",
]
